1) Права 2) исправление фильтрации